--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-  <!-- Navbar -->
+  <!-- Navbar xd -->
   <nav class="navbar navbar_di-buffala">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
